--- a/app-client/apollo-client/package.json
+++ b/app-client/apollo-client/package.json
@@ -1,7 +1,6 @@
 {
   "name": "app-client",
-  "homepage":
-    "https://s3-bucketname-serverless-graphql.s3-website-us-east-1.amazonaws.com",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,11 +10,11 @@
     "apollo-link-http": "^1.3.2",
     "graphql": "^0.11.7",
     "graphql-tag": "^2.5.0",
-    "prop-types": "^15.6.0",
-    "react": "^16.1.1",
-    "react-apollo": "^2.0.1",
-    "react-dom": "^16.1.1",
-    "react-scripts": "^1.0.17",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.2",
+    "react-apollo": "^2.4.1",
+    "react-dom": "^16.8.2",
+    "react-scripts": "^2.1.5",
     "reset-css": "^2.2.1",
     "styled-components": "^2.2.3"
   },
@@ -32,6 +31,6 @@
     "enzyme": "^3.1.1",
     "enzyme-adapter-react-16": "^1.0.4",
     "react-test-renderer": "^16.1.1",
-    "serverless-finch": "^1.3.0"
+    "serverless-finch": "^2.3.2"
   }
 }
