--- a/app-client/apollo-client/serverless.yml
+++ b/app-client/apollo-client/serverless.yml
@@ -4,8 +4,8 @@ frameworkVersion: ">=1.21.0 <2.0.0"
 
 provider:
   name: aws
-  runtime: nodejs6.10
-  stage: dev
+  runtime: nodejs8.10
+  stage: production
   region: us-east-1
 
 plugins:
@@ -13,5 +13,5 @@ plugins:
 
 custom:
   client:
-    bucketName: s3-bucketname-serverless-graphql
+    bucketName: s3-foundobjx-serverless1-graphql
     distributionFolder: build
