--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "serverless-graphql",
   "private": true,
   "scripts": {
+    "precommit_not": "lint-staged",
     "lint":
       "eslint app-backend/appsync/**/*.js app-backend/dynamodb/*.js app-backend/rest-api/*.js app-backend/rds/*.js app-client/**/src/**/*.js",
     "prettier":
